css commit added images

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,4 +1,10 @@
+* {
+    margin: 0;
+}
+
 body {
+    background-image: url("https://as2.ftcdn.net/v2/jpg/05/75/71/45/1000_F_575714526_zdWnQBEP8G8L1u3E84oOryO3T4L2LK5L.jpg");
+    background-color: black;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-areas:
@@ -13,30 +19,35 @@ body {
 }
 
 .header {
+    margin-top: 13%;
+    padding: 20px;
     grid-area: header;
     text-align: center;
-    background: whitesmoke;
+    background: rgba(245, 245, 245, 0.323);
     border: 1px solid black
 }
 
 #main-container {
     grid-area: main-container;
+    background-color: #333333;
 }
 
 .park-areas {
     display: flex;
     flex-wrap: wrap;
-    
+    margin-left: 1em;
+
 }
 
 .park-area-card {
-    flex-basis: 22%;
+    flex-basis: 25%;
     padding: 20px;
     border: 1px dotted black;
     border-radius: 2em;
-    justify-content: space-evenly;
     text-align: center;
-    margin: auto;
+    /* place padding above/below and right/left */
+    margin: 1em auto 1em auto;
+    background-color: #f3d3bdb6;
 }
 
 .right-sidebar-flexbox {
@@ -44,7 +55,11 @@ body {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    padding-top: 1em;
     padding-left: 1rem;
+    background-color: #333333;
+    color: #fcfaf9;
+
 
 }
 
@@ -52,7 +67,9 @@ body {
     display: flex;
     flex-wrap: wrap;
     grid-area: services;
-    margin-bottom: 5px;
+    background-color: yellowgreen;
+    padding: 10px;
+    text-size-adjust: .75rem;
 }
 
 .footer {
@@ -60,5 +77,13 @@ body {
     font-size: 10px;
     font-style: none;
     text-align: center;
-    background: whitesmoke;
+    background: #fcfaf96e;
+    padding: 10px;
+}
+
+img {
+    max-width: 60px;
+    display: block;
+    margin: auto;
+    padding-bottom: 4px;
 }
